--- a/0x00-html_advanced/4-index.html
+++ b/0x00-html_advanced/4-index.html
@@ -8,13 +8,20 @@
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="icon" type="image/png" href="/favicon.png">
 
-<title>Homepage - Techium</title>
+  <title>Article - Techium</title>
 
 </head>
 
+<body>
+  <header>
+    Header
+  </header>
 
+  <main>
+    <aside>Aside</aside>
+  </main>
 
-<body> </body>
+  <footer>footer</footer>
 
-
+</body>
 </html>
