--- a/0x00-html_advanced/15-index.html
+++ b/0x00-html_advanced/15-index.html
@@ -39,7 +39,7 @@
       <h3>UX Design</h3>
       <h3>Web Development</h3>
       <h3>Social Media</h3>
-      <div>
+      </div>
     </section>
 
     <section>
