--- a/0x00-html_advanced/35-index.html
+++ b/0x00-html_advanced/35-index.html
@@ -16,7 +16,7 @@
   <header>
     <div>
       <div>
-	<a href="/"><span>Techium</span></a>
+	<a href="/"><span><img src="logo-black.png" alt="Techium logo" width="160" height="40"></span></a>
       </div>
     <nav>
       <ul>
@@ -169,6 +169,7 @@
 
 <!--Footer-->
   <footer>
+    <img src="logo-black.png" alt="Techium logo" width="160" height="40">
     234 Washington Street (line-break) Urbana, Illinois
     <div>
       <ul>
