fixed heading in works section

--- a/0x00-html_advanced/10-index.html
+++ b/0x00-html_advanced/10-index.html
@@ -39,21 +39,21 @@
       <h2>Works</h2>
 
       <article>
-	Interior Design
+	<h3>Interior Design</h3>
       </article>
 
       <article>
-	Web Development
+	<h3>Web Development</h3>
       </article>
 
       <article>
-	Personal Brand
+	<h3>Personal Brand</h3>
       </article>
 
     </section>
 
     <section>
-      <h2>About us</h2>
+      <h3>About us</h3>
       <h3>Who are we</h3>
       <h3>Our culture</h3>
       <h3>How we work</h3>
