--- a/0x00-html_advanced/3-index.html
+++ b/0x00-html_advanced/3-index.html
@@ -19,9 +19,13 @@
     Header
   </header>
 
-  <main>main</main>
+  <main>
+    main
+  </main>
 
-  <footer>footer</footer>
+  <footer>
+    footer
+  </footer>
 
 </body>
 </html>
