--- a/0x00-html_advanced/article.html
+++ b/0x00-html_advanced/article.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html lang="en" dir="rtl">
 <head>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
-  <title>Homepage - Techium</title>
+  <title>Article - Techium</title>
 
   <meta name="description" content="Techium is a digital agency">
 
   <link rel="icon" type="image/x-icon" href="./favicon.ico">
   <link rel="icon" type="image/png" href="./favicon.png">
 
-
-  <title>Article - Techium</title>
-
 </head>
 
-<body>
+<body> 
+
   <header>
     Header
   </header>
 
   <main>
-    <aside>Aside</aside>
+    Main content
   </main>
+  <aside>
+    Aside
+  </aside>
 
-  <footer>footer</footer>
+  <footer>
+    Footer
+  </footer>
 
 </body>
 </html>
