--- a/0x00-html_advanced/11-styleguide.html
+++ b/0x00-html_advanced/11-styleguide.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang="en" dir="rtl">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" width="device-width" initial-scale="1.0" viewport-fit="cover">
-  <meta name="description" content="Techium is a digital agency">
-
-  <link rel="icon" type="image/x-icon" href="/favicon.ico">
-  <link rel="icon" type="image/png" href="/favicon.png">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
   <title>Styleguide - Techium</title>
 
+  <meta name="description" content="Techium is a digital agency">
+
+  <link rel="icon" type="image/x-icon" href="./favicon.ico">
+  <link rel="icon" type="image/png" href="./favicon.png">
+
 </head>
 
-<body>
-  <header>
+<body> 
 
+  <header>
+    
   </header>
 
   <main>
-    <section>
-      <header><h2>Headings</h2></header>
+    <section> 
+      <header>
+	<h2>Headings</h2>
+      </header>
       <h1>Heading level 1</h1>
       <h2>Heading level 2</h2>
       <h3>Heading level 3</h3>
@@ -27,10 +31,11 @@
       <h5>Heading level 5</h5>
       <h6>Heading level 6</h6>
     </section>
-
   </main>
 
-  <footer></footer>
+  <footer>
+    
+  </footer>
 
 </body>
 </html>
