--- a/0x00-html_advanced/12-index.html
+++ b/0x00-html_advanced/12-index.html
@@ -25,7 +25,7 @@
       <h2>We help you build your brand!</h2>
     </section>
     <section>
-      <h2>Services<h2>
+      <h2>Services</h2>
 	  <p>We work with you</p>
 	  <h3>Design & Concept</h3>
 	  <h3>Digital Strategy</h3>
@@ -70,7 +70,7 @@
       <article>
 	<p>Social</p>
 	<h3>Bestiarum vero nullum iudicium puto.</h3>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.<p/>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
       </article>
     </section>
     <section>
