--- a/0x00-html_advanced/17-index.html
+++ b/0x00-html_advanced/17-index.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="rtl">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" width="device-width" initial-scale="1.0" viewport-fit="cover">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+
   <meta name="description" content="Techium is a digital agency">
 
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -26,7 +27,7 @@
     <section>
       <div>
       <h2>We help you build your brand!</h2>
-      <div>
+      </div>
     </section>
 <!--Services section-->
     <section>
