--- a/0x00-html_advanced/2-index.html
+++ b/0x00-html_advanced/2-index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="rtl">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
   <title>Homepage - Techium</title>
@@ -10,7 +10,6 @@
 
   <link rel="icon" type="image/x-icon" href="./favicon.ico">
   <link rel="icon" type="image/png" href="./favicon.png">
-
 
 </head>
 
