--- a/0x00-html_advanced/24-index.html
+++ b/0x00-html_advanced/24-index.html
@@ -3,14 +3,12 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
-  <title>Homepage - Techium</title>
+  <title>Article - Techium</title>
 
   <meta name="description" content="Techium is a digital agency">
 
   <link rel="icon" type="image/x-icon" href="./favicon.ico">
   <link rel="icon" type="image/png" href="./favicon.png">
-
-  <title>Article - Techium</title>
 
 </head>
 <!---Header-->
@@ -37,14 +35,14 @@
   <main>
     <h1>Homepage</h1>
 <!--Hero Section-->
-    <section>
+<section>
       <div>
       <h2>We help you build your brand!</h2>
       <a href="#">Get Started</a>
-      <div>
-    </section>
+      </div>
+</section>
 <!--Services section-->
-    <section>
+<section>
       <div>
 	<header>
       <h2>Services</h2>
