--- a/0x05-form/03-article.html
+++ b/0x05-form/03-article.html
@@ -151,25 +151,37 @@
               <fieldset class="visually-hidden"> 
                 <legend>Your personal information</legend>
                 <div class="form-group col-1-2">
-
+                  <label for="your-first-name">First Name</label>
+                  <div class="form-field">
+                    <span class="form-field-container"></span>
+                  </div>
                 </div>
                 <div class="form-group col-1-2"> 
-
+                  <label for="your-last-name">Last Name</label>
+                  <div class="form-field">
+                    <span class="form-field-container"></span>
+                  </div>
                 </div>
                 <div class="form-group col-2-3">
-
+                  <label for="your-email">Email</label>
+                  <div class="form-field">
+                    <span class="form-field-container"></span>
+                  </div>
                 </div>
               </fieldset>
               <fieldset class="visually-hidden">
                 <legend>Your comment</legend>
                 <div class="form-group col-2-3">
-
+                  <label for="your-title">Title</label>
+                  <span class="form-field-container"></span>
                 </div>
                 <div class="form-group col-2-3">
-
+                  <label for="your-comment">Comment</label>
+                  <div class="form-field"></div>
+                  <span class="form-field-container"></span>
                 </div>
                 <div class="form-group">
-
+                  <button class="button button-primary">Post my comment</button>
                 </div>
 
               </fieldset>
