--- a/0x05-form/05-article.html
+++ b/0x05-form/05-article.html
@@ -148,14 +148,16 @@
               <p>All fields are required.</p>
             </header>
             <form action="#" method="POST">
-              <fieldset class="visually-hidden"> 
-                <legend>Your personal information</legend>
+              <fieldset> 
+                <legend class="visually-hidden">Your personal information</legend>
                 <div class="form-group col-1-2">
                   <label for="your-first-name">First Name</label>
                   <div class="form-field">
                     <span class="form-field-container">
                       <input type="text" name="your-first-name" id="your-first-name" placeholder="e.g. Mike" pattern="[A-Za-zÀ-ž\s]{3,}" maxlength="35" autocomplete="on" accesskey="f" required="true">
+                      <i form-field-icon> </i>
                     </span>
+                    <p form-help> First name should be at least 3 characters and only contains letters</p>
                   </div>
                 </div>
                 <div class="form-group col-1-2"> 
@@ -164,6 +166,7 @@
                     <span class="form-field-container">
                       <input type="text" name="your-last-name" id="your-last-name" placeholder="e.g. Smith" pattern="[A-Za-zÀ-ž\s]{3,}" maxlength="40" autocomplete="on" accesskey="l" required="true">
                     </span>
+                    <p class="form-help"> Last name should be at least 3 characters and only contains letters</p>
                   </div>
                 </div>
                 <div class="form-group col-2-3">
@@ -185,8 +188,11 @@
                 </div>
                 <div class="form-group col-2-3">
                   <label for="your-comment">Comment</label>
-                  <div class="form-field"></div>
+                  <div class="form-field">
+                    <p class="form-help"> Comment should be at least 10 characters</p>
+                  </div>
                   <span class="form-field-container"></span>
+                  <p class="form-help"> Title should be at least 4 characters and only contains letters</p>
                 </div>
                 <div class="form-group">
                   <button class="button button-primary">Post my comment</button>
