--- a/0x06-responsive_design/04-index.html
+++ b/0x06-responsive_design/04-index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -20,6 +19,10 @@
             <img src="images/logo-white.png" alt="Techium logo" width="160" height="40">
           </a>
         </div>
+        <input type="checkbox" class="menu-btn" id="menu-btn">
+        <label for="menu-btn" class="menu-icon">
+          <span class="navicon"></span>  
+        </label>
         <nav class="navbar-menu">
           <ul class="nav">
             <li class="nav-item">
@@ -397,3 +400,4 @@ alt="">
     </footer>
   </body>
 </html>
+
