--- a/0x07-accessibility/fix-a11y/05-index.html
+++ b/0x07-accessibility/fix-a11y/05-index.html
@@ -160,8 +160,8 @@
               <form action="#" method="post">
                 <div class="input-group">
 		  <label class="visually-hidden" for"email"></label>
-                  <input id="email" class="form-control" type="text" name="email" placeholder="Enter Email Address">
-                  <div class="input-group-btn"><a class="btn" type="submit">Validate</a></div>
+                  <input id="email" class="form-control" type="email" name="email" autocomplete="email" required aria-required="true">
+                  <div class="input-group-btn"><a class="btn" type="button">Validate</a></div>
                 </div>
               </form>
             </div>
