--- a/0x07-accessibility/fix-a11y/09-index.html
+++ b/0x07-accessibility/fix-a11y/09-index.html
@@ -9,11 +9,11 @@
     </style>
   </head>
   <body>
-    <div class="header">
+    <header class="header">
       <div>
         <div>
           <div><a href="#"><img src="img/logo.png" alt="Name of the logo"></a></div>
-          <div class="nav">
+          <nav class="nav">
             <div>
               <p><a href="#">Home</a></p>
               <p><a href="#">About</a></p>
@@ -23,12 +23,13 @@
               <p><a href="#">Pages</a></p>
               <p><a href="#">Contact</a></p>
             </div>
-          </div>
+          </nav>
         </div>
       </div>
-    </div>
+    </header>
+    <main>
     <h1>Homepage</h1>
-    <div class="section">
+    <section class="section">
       <div class="container">
         <div class="row">
           <div class="col-6">
@@ -39,8 +40,8 @@
           <div class="col-6"><img class="img-fluid" src="hero-img.png" alt=""></div>
         </div>
       </div>
-    </div>
-    <div class="section">
+    </section>
+    <section class="section">
       <div class="container">
         <div class="row">
           <div class="col-6"><img class="img-fluid" src="about-img.png" alt="About image"></div>
@@ -51,8 +52,8 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="section">
+    </section>
+    <section class="section">
       <div class="container">
         <div class="row">
           <div class="col-7">
@@ -64,7 +65,7 @@
         </div>
         <div class="row">
           <div class="col-4">
-            <div class="single-services"><a href="#">
+            <div class="single-services"><fa href="#">
                 <h3>Web Design</h3></a>
               <p>It is not because things are difficult that we do not dare; it is because we do not dare that they are difficult.”</p>
             </div>
@@ -77,7 +78,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <div class="section">
       <div class="container">
         <div class="row">
@@ -92,7 +93,7 @@
         </div>
       </div>
     </div>
-    <div class="section">
+    <section class="section">
       <div class="container">
         <div class="row">
           <div class="menu-content">
@@ -115,8 +116,8 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="section">
+    </section>
+    <section class="section">
       <div class="container">
         <div class="row">
           <div class="col-8">
@@ -142,8 +143,9 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="footer">
+    </section>
+    </main>
+    <footer class="footer">
       <div class="container">
         <div class="row">
           <div class="col-5">
@@ -173,6 +175,6 @@
           </div>
         </div>
       </div>
-    </div>
+    </footer>
   </body>
 </html>
