beginning hamburger menu

--- a/0x06-responsive_design/04-index.html
+++ b/0x06-responsive_design/04-index.html
@@ -20,9 +20,7 @@
           </a>
         </div>
         <input type="checkbox" class="menu-btn" id="menu-btn">
-        <label for="menu-btn" class="menu-icon">
-          <span class="navicon"></span>  
-        </label>
+        <label for=" menu-btn" class="menu-icon"> <span class="navicon"></span></label>
         <nav class="navbar-menu">
           <ul class="nav">
             <li class="nav-item">
@@ -182,12 +180,12 @@
             <div class="row">
               <div class="col-1-2">
                 <img
-sizes="(max-width: 3000px) 40vw, 1200px"
+sizes="(max-width: 1200px) 100vw, 1200px"
 srcset="
-pic-about-01_mnh4et_c_scale,w_300.jpg 300w,
-pic-about-01_mnh4et_c_scale,w_950.jpg 950w,
-pic-about-01_mnh4et_c_scale,w_1200.jpg 1200w"
-src="pic-about-01_mnh4et_c_scale,w_1200.jpg"
+pic-about-01_grmenv_c_scale,w_380.jpg 380w,
+pic-about-01_grmenv_c_scale,w_964.jpg 964w,
+pic-about-01_grmenv_c_scale,w_1200.jpg 1200w"
+src="pic-about-01_grmenv_c_scale,w_1200.jpg"
 alt="">
               </div>
               <div class="col-1-2">
@@ -217,12 +215,12 @@ alt="">
                 <article class="card-blog">
                   <div>
                     <img
-sizes="(max-width: 3000px) 40vw, 1200px"
+sizes="(max-width: 1200px) 100vw, 1200px"
 srcset="
-pic-article-01_y6t3wa_c_scale,w_300.jpg 300w,
-pic-article-01_y6t3wa_c_scale,w_848.jpg 848w,
-pic-article-01_y6t3wa_c_scale,w_1200.jpg 1200w"
-src="pic-article-01_y6t3wa_c_scale,w_1200.jpg"
+pic-article-01_nvf2ud_c_scale,w_380.jpg 380w,
+pic-article-01_nvf2ud_c_scale,w_870.jpg 870w,
+pic-article-01_nvf2ud_c_scale,w_1200.jpg 1200w"
+src="pic-article-01_nvf2ud_c_scale,w_1200.jpg"
 alt="">
                   </div>
                   <p class="card-category">Career</p>
@@ -235,13 +233,14 @@ alt="">
                 <article class="card-blog">
                   <div>
                     <img
-sizes="(max-width: 3000px) 40vw, 1200px"
+sizes="(max-width: 1200px) 100vw, 1200px"
 srcset="
-pic-article-02_eqytzn_c_scale,w_300.jpg 300w,
-pic-article-02_eqytzn_c_scale,w_827.jpg 827w,
-pic-article-02_eqytzn_c_scale,w_1200.jpg 1200w"
-src="pic-article-02_eqytzn_c_scale,w_1200.jpg"
+pic-article-02_onuzwd_c_scale,w_380.jpg 380w,
+pic-article-02_onuzwd_c_scale,w_851.jpg 851w,
+pic-article-02_onuzwd_c_scale,w_1200.jpg 1200w"
+src="pic-article-02_onuzwd_c_scale,w_1200.jpg"
 alt="">
+
                   </div>
                   <p class="card-category">Digital Life</p>
                   <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
@@ -253,12 +252,12 @@ alt="">
                 <article class="card-blog">
                   <div>
                     <img
-sizes="(max-width: 3000px) 40vw, 1200px"
+sizes="(max-width: 1200px) 100vw, 1200px"
 srcset="
-pic-article-03_uscbyd_c_scale,w_300.jpg 300w,
-pic-article-03_uscbyd_c_scale,w_846.jpg 846w,
-pic-article-03_uscbyd_c_scale,w_1200.jpg 1200w"
-src="pic-article-03_uscbyd_c_scale,w_1200.jpg"
+pic-article-03_opbtss_c_scale,w_380.jpg 380w,
+pic-article-03_opbtss_c_scale,w_871.jpg 871w,
+pic-article-03_opbtss_c_scale,w_1200.jpg 1200w"
+src="pic-article-03_opbtss_c_scale,w_1200.jpg"
 alt="">
                   </div>
                   <p class="card-category">Social</p>
@@ -400,4 +399,3 @@ alt="">
     </footer>
   </body>
 </html>
-
